--- a/bookStoreApp/assignment3.html
+++ b/bookStoreApp/assignment3.html
@@ -17,9 +17,7 @@
       <link rel="stylesheet" type="text/css" href="theme.css">
    </head>
    <body>
-      Angular Bookstore App
-      <br>
-      <br>
+      <h1>Angular Bookstore App</h1>
       <ul class="tab">
          <li><a ui-sref="bookList">Book List</a></li>
          <li><a ui-sref="addBook">Add Book</a></li>
