--- a/bookStoreApp/assignment3.html
+++ b/bookStoreApp/assignment3.html
@@ -32,7 +32,7 @@
             </div>
             <div class="modal-body">
                Quantity:   
-               <input name="inStock" type="text" ng-model="book.orderQuantity">
+               <input name="inStock" type="number" ng-model="book.orderQuantity">
                <br>
                <br>
                <button type="submit" value="Submit" ng-click="orderBookWithQuantiy(book)">Order</button>
