changed folder stucture

--- a/bookStoreApp/html/bookDetails.html
+++ b/bookStoreApp/html/bookDetails.html
@@ -31,7 +31,7 @@
             <td>{{book.addedAt | date:'medium'}}</td>
          </tr>
          <tr>
-            <td><b>Book ordered Last at</b></td>
+            <td><b>Book ordered Last addedAt</b></td>
             <td>{{book.orderedAt | date:'medium'}}</td>
          </tr>
       </table>
