--- a/bookStoreApp/index.html
+++ b/bookStoreApp/index.html
@@ -2,19 +2,19 @@
 <html ng-app="myApp">
    <head>
       <!--<script data-require="angular.js@1.5.8" data-semver="1.5.8" src="https://code.angularjs.org/1.5.8/angular.js"></script> -->
-      <script src="angular.js"></script>
-      <script src="angular-ui-router.js"></script>
+      <script src="lib/angular.js"></script>
+      <script src="lib/angular-ui-router.js"></script>
       <!-- 
          <script data-require="angular.js@1.5.8" data-semver="1.5.8" src="https://code.angularjs.org/1.5.8/angular.js"></script>
          <script data-require="ui-router@0.3.0" data-semver="0.3.0" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js"></script>         
          -->
-      <script type="text/javascript" src="books.json"></script>
-      <script type="text/javascript" src="app.js"></script>
-      <script type="text/javascript" src="service.js"></script>  
-      <script type="text/javascript" src="filter.js"></script> 
-      <script type="text/javascript" src="controller.js"></script>
-      <script type="text/javascript" src="addBookCtrl.js"></script>
-      <link rel="stylesheet" type="text/css" href="theme.css">
+      <script type="text/javascript" src="data/books.json"></script>
+      <script type="text/javascript" src="src/main/app.js"></script>
+      <script type="text/javascript" src="src/services/service.js"></script>  
+      <script type="text/javascript" src="src/filters/filter.js"></script> 
+      <script type="text/javascript" src="src/controllers/controller.js"></script>
+      <script type="text/javascript" src="src/controllers/addBookCtrl.js"></script>
+      <link rel="stylesheet" type="text/css" href="html/theme.css">
    </head>
    <body>
       <h1>Angular Bookstore App</h1>
