--- a/bookStoreApp/index.html
+++ b/bookStoreApp/index.html
@@ -30,13 +30,32 @@
             <div class="modal-header">
                <h3>Order Book</h3>
             </div>
-            <div class="modal-body">
+            <div class="modal-body">               
                Quantity:   
                <input name="inStock" type="number" ng-model="book.orderQuantity">
                <br>
                <br>
                <button type="submit" value="Submit" ng-click="orderBookWithQuantiy(book)">Order</button>
                <button type="cancel" value="Cancel" ng-click="closeWindow()">Cancel</button>
+            </div>
+         </div>
+      </div>
+
+      <div id="confirmBookDeleteModel" class="modal" >
+         <!-- Modal content -->
+         <div class="modal-content" ng-controller="myCtrl">
+            <div class="modal-header">
+               <h3>Remove Book</h3>
+            </div>
+            <div class="modal-body">
+               <br>
+               <br>
+               Are you sure you want to delete the book?
+               <br>
+               <br>
+               <br>
+               <button type="submit" value="Submit" ng-click="removeBookConfirm(book)">Yes</button>
+               <button type="cancel" value="Cancel" ng-click="closeRemoveBookConfirm()">Cancel</button>
             </div>
          </div>
       </div>
