inline editing of instock

--- a/bookStoreApp/html/bookDetails.html
+++ b/bookStoreApp/html/bookDetails.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+
    <div ng-controller="addBookCtrl">
+      Book Details for: {{book.title}} by {{book.auther}}.
+      <br>
+      <br>
       <table border="1" class="bookListTable" >
          <tr>
          	<td><b>Auther</b></td>
